Solved identation issues on mobile version.

--- a/css/main.scss
+++ b/css/main.scss
@@ -50,7 +50,7 @@ $on-laptop:        950px;
 }
 @media only screen and (max-width: 600px) {
   .ident{
-        margin-left: 0px;
+        margin-left: auto;
   }
 }
 
